# edgegraph

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: README.en.md  README.ko.md
edgedb/dbschema/: default.esdl
edgegraph/: errors.py  expressions.py  query_builder.py  reflections.py  schema.py  types.py  validator.py
edgegraph/expressions/: base.py  side.py
edgegraph/query_builder/: base.py  insert.py  select.py  update.py
edgegraph/syntax/: base.py  shape.py
edgegraph/syntax/expression/: base.py  coalesce.py  compare.py  compose.py  conditional.py  multi_conditional.py  path.py  scoped.py  search.py
edgegraph/syntax/expression/invoke/: base.py  math.py  std.py
edgegraph/syntax/query/: base.py
edgegraph/syntax/shape/: base.py
tests/: query_builder_test.py  schema_test.py  validator_test.py
tests/models/: __init__.py
tests/query_builder/: insert_test.py  select_test.py  update_test.py
